# ct

shad-rust/: Cargo.toml  SETUP.md
shad-rust/add/: README.md
shad-rust/add/src/: lib.rs
shad-rust/add/tests/: tests.rs
shad-rust/chip8/: .allowlist  Cargo.toml  Makefile  README.md
shad-rust/chip8/src/: data.rs  error.rs  image.rs  interpreter.rs  lib.rs  managed_interpreter.rs  platform.rs
shad-rust/chip8/tests/: tests.rs
shad-rust/comm/: Cargo.toml  Makefile  README.md
shad-rust/comm/benches/: benches.rs
shad-rust/comm/src/: main.cpp  main.rs
shad-rust/comm/tests/: tests.rs
shad-rust/flatmap/: Cargo.toml  Makefile  README.md
shad-rust/flatmap/benches/: benches.rs
shad-rust/flatmap/src/: lib.rs
shad-rust/flatmap/tests/: tests.rs
shad-rust/fswalk/: Cargo.toml  Makefile  README.md
shad-rust/fswalk/src/: lib.rs
shad-rust/fswalk/tests/: tests.rs
shad-rust/gc/: .allowlist  Cargo.toml  Makefile  README.md
shad-rust/gc/gc-derive/: Cargo.toml
shad-rust/gc/src/: lib.rs
shad-rust/ini/: Cargo.toml  README.md
shad-rust/mpsc/: Cargo.toml  README.md
shad-rust/orm/: .allowlist  Cargo.toml  Makefile  README.md
shad-rust/paperio/: .allowlist  Cargo.toml  Makefile  README.md  launch.json
shad-rust/pargrep/: Cargo.toml  README.md
shad-rust/perc/: Cargo.toml  Makefile  README.md
shad-rust/polka/: Cargo.toml  README.md
shad-rust/pstack/: Cargo.toml  Makefile  README.md
shad-rust/stdmacro/: Cargo.toml  README.md
shad-rust/tcp_proxy/: Cargo.toml  Makefile  README.md
shad-rust/trust/: Cargo.toml  Makefile  README.md
translation-methods/top-down-parser/: CMakeLists.txt  readme.md
(+582 files in other folders)
