[package]
name = "tcp_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
log = "0.4.17"
rand = "0.8.5"
simplelog = "0.12.0"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json", "tracing-log"] }
tracing-tree = "0.2.2"
